Use raw <compilerArgs> to enable preview features